added social authentication, todo: move parts of code to utils module

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,10 @@ Flask
 Flask-MongoEngine
 Flask-Mail
 Flask-Login
+google-auth
+google-auth-oauthlib
 Pillow
 Python-Dotenv
+requests
 itsdangerous
 timeago
