installed pytest, added mongoengine database fixtures

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,3 +3,8 @@ exclude = .git,__pycache__,*/migrations/*,*/settings/*,*/apps.py*
 max-line-length = 100
 max-complexity = 8
 ignore = W293,W503,W504
+
+[tool:pytest]
+filterwarnings = 
+    # Hide Deprecation Warnings
+    ignore::DeprecationWarning
