commented ignored errors

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,11 @@
 exclude = .git,__pycache__,*/migrations/*,*/settings/*,*/apps.py* 
 max-line-length = 100
 max-complexity = 8
-ignore = W293,W503,W504
+ignore = 
+  W293,  # blank line contains whitespace
+  W503,  # line break occured before a binary operator
+  W504,  # line break occured after a binary operator
+  N802,  # lowercase function naming
 
 [tool:pytest]
 filterwarnings = 
