--- a/setup.cfg
+++ b/setup.cfg
@@ -3,10 +3,17 @@ exclude = .git,__pycache__,*/migrations/*,*/settings/*,*/apps.py*
 max-line-length = 100
 max-complexity = 8
 ignore = 
-  W293,  # blank line contains whitespace
-  W503,  # line break occured before a binary operator
-  W504,  # line break occured after a binary operator
-  N802,  # lowercase function naming
+  # blank line contains whitespace
+  W293,
+
+  # line break occured before a binary operator
+  W503, 
+
+  # line break occured after a binary operator
+  W504, 
+
+  # lowercase function naming
+  N802,
 
 [tool:pytest]
 filterwarnings = 
